set parsing time to task